--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,6 @@ dependencies {
     implementation 'io.coil-kt:coil-compose:2.0.0-rc01'
 
     implementation 'io.supercharge:shimmerlayout:2.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
 }
